Changelog for Dist::Zilla::PluginBundle::TestingMania

{{$NEXT}}
 * Forgotten hash key renamed [rstauner]

0.009     2011-04-19
 * Renamed options for clarity: add -> enable; skip -> disable
 * Don't require the absolute latest prerequisites
 * Require a version of the Test::CPAN::Meta::JSON plugin that prunes itself
   when META.json isn't present. Users no longer need to disable this test
   in that situation.

0.008     2011-04-16
 * Include a test for META.json - disable it if your dists don't include this
 * Removed ProgCriticTests (was disabled by default)
 * Removed CheckChangesTests
 * Documentation improvements

0.007     2011-04-12
 * New prereq names

0.006     2011-04-04
 * Set default changelog; thanks to mjgardner

0.005     2011-04-02
 * Added ChangesTests

0.004     2011-02-15
 * Removed PodLinkTests; the dependencies are too immature

0.003     2011-01-31
 * Removed ApacheTests
 * Removed PodSpellingTests, which has a fail in the dependency chain, wasn't
   enabled by default, and is too annoying to bear.
 * Added PodLinkTests

0.002     2010-11-28
 * Flesh out the chain of dependencies to get full functionality
 * Use Perl_5 license

0.001     2010-10-18
 * Initial version