@@ -1,5 +1,0 @@
-use strict;
-use warnings;
-use Test::More tests => 1;
-
-use_ok('Dist::Zilla::PluginBundle::TestingMania');
